tests/failing/2-comptime-format-runtime-source/main.af
fmt: /std/fmt
str: @str

print_name: (source: str, name: str, ok: ()) {
    fmt.new(
        source,
        @compile_error("invalid format", @exit(1)),
        fmt.str(name) fmt.end, @write(ok: ok)
    )
}

main: () {
    print_name("hello %\n", "Alice", @exit(0))
}
